# spherical-array-processing

./: .gitignore  CHANGELOG.md  CITATION.cff  CODEX_FULL_AUDIT_B11.md  CODEX_REVIEW_B10_1.md  CODEX_REVIEW_B10_2.md  CODEX_REVIEW_B11_1.md  CODEX_REVIEW_B11_2.md  CODEX_REVIEW_B11_3.md  CODEX_REVIEW_B12_1.md  CODEX_REVIEW_B12_2.md  CODEX_REVIEW_B13_1.md  CODEX_REVIEW_B13_2.md  CODEX_REVIEW_B14_A1.md  CODEX_REVIEW_B14_A2.md  CODEX_REVIEW_B14_A3.md  CODEX_REVIEW_B14_FINAL.md  CODEX_REVIEW_B15_A12.md  CODEX_REVIEW_B15_A3.md  CODEX_REVIEW_B15_A45.md  CODEX_REVIEW_B5_1.md  CODEX_REVIEW_B5_2.md  CODEX_REVIEW_B6_1.md  CODEX_REVIEW_B6_2.md  CODEX_REVIEW_B7_1.md  CODEX_REVIEW_B7_2.md  CODEX_REVIEW_B8_1.md  CODEX_REVIEW_B8_2.md  CODEX_REVIEW_B9_1.md  CODEX_REVIEW_B9_2.md  CODEX_SCORECARD_B14.md  CODEX_SCORECARD_B15.md  CODEX_SCORECARD_B15_POLISH.md  CODEX_SCORECARD_B15_POLISH2.md  CODEX_SCORECARD_B15_POLISH3.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  (+3 more)
docs/: CROSS_REFERENCE_AUDIT.md  IMPLEMENTATION_STATUS.md  PARALLEL_MIGRATION_WORKFLOW.md  PROGRESS_DASHBOARD.md  README.md  RELEASE_CHECKLIST.md  ambisonics_codecs.md  ambisonics_concepts.md  concepts.md  getting_started.md  release_checklist.md  source_inventory.json  statistical_room_acoustics.md  v0_4_0_expansion_research.md  v0_5_0_ambisonics_release_plan.md  v0_6_0_fivefold_expansion_audit.md
examples/: README.md  binaural_em32_to_ears.py
scripts/: __init__.py  build_source_inventory.py  check_matlab_cli.py  compare_images.py  eval_foa_stereo_dl.py  external_numeric_audit.py  generate_parallel_migration_tasks.py  run_function_conformance.py  run_rafaely_ch1_example_function.py  run_rafaely_ch1_pn.py  run_rafaely_ch1_pnm.py  run_rafaely_ch1_rotation.py  run_rafaely_ch1_sh_balloon.py  run_rafaely_ch1_sinc_and_cap.py  run_rafaely_ch1_spherical_grid.py  run_rafaely_ch1_truncated_cap.py  run_rafaely_ch1_xyz_coordinates.py  run_rafaely_ch2_planewave_freefield_sphere.py  run_rafaely_ch2_planewave_freefield_xy.py  run_rafaely_ch2_planewave_rigid_sphere.py  run_rafaely_ch2_planewave_rigid_xy.py  run_rafaely_ch2_radial_functions_1.py  run_rafaely_ch2_radial_functions_2.py  run_rafaely_ch3_aliasing_example.py  run_rafaely_ch3_aliasing_matrix.py  run_rafaely_ch3_gaussian.py  run_rafaely_ch3_platonic_solids.py  run_rafaely_ch3_sampling_schemes.py  run_rafaely_ch6_dolph.py  (+23 more)
(+210 files in other folders)
