[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spherical-array-processing"
version = "0.4.0"
description = "Pythonic spherical array processing toolkit — SH transforms, Ambisonics, beamforming, DOA"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "konoyo" }
]
keywords = [
  "spherical harmonics",
  "microphone array",
  "beamforming",
  "direction of arrival",
  "ambisonics",
  "spatial audio",
  "acoustics",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Multimedia :: Sound/Audio :: Analysis",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
]

[project.urls]
Source = "https://github.com/Konoyo-014/spherical-array-processing"
Issues = "https://github.com/Konoyo-014/spherical-array-processing/issues"
Changelog = "https://github.com/Konoyo-014/spherical-array-processing/blob/main/CHANGELOG.md"

[project.optional-dependencies]
audio = [
  "soundfile>=0.12",
]
dev = [
  "build>=1.2",
  "pytest>=8.0",
  "pytest-cov>=5.0",
]
hrtf = [
  "h5py>=3.6",
]
image = [
  "scikit-image>=0.22",
]
plotting = [
  "matplotlib>=3.8",
]

# Developer-only layers (``repro``, ``regression``, ``experimental``)
# are kept in the source tree + sdist for reproduction and
# regression work, but explicitly excluded from the installed wheel
# so ``pip install`` only ships the stable public surface.
# ``include-package-data = false`` is required so setuptools does
# not re-add the excluded directories as "package data" via
# MANIFEST.in's ``recursive-include``.
[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["spherical_array_processing*"]
exclude = [
  "spherical_array_processing.repro*",
  "spherical_array_processing.regression*",
  "spherical_array_processing.experimental*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
